css/seenet.scss
---
# Main stylesheet
---
$main_color:#3a538f;
$desat_color:#5e6168;

html {
    width:100vw;
    overflow-x:hidden;
}

body {
    max-width:1200px;
    margin:auto;
    font-family:Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
    line-height:1.5;
    font-size:large;
    padding:0 1ex 0 1ex;
}
#banner {
    width:100%;
    min-height:15%;
    margin-bottom:3em;
    overflow-x:hidden;
}
#banner img {
    max-width:633px;
    max-height:171px;
    margin:0 6% 0 6%;
}
nav {
    width:30%;
    vertical-align:top;
    margin-right:5%;

    a {
		color:inherit;
		text-decoration:none;

		&:visited {
			color:inherit;
		}
	}
}
main {
    width:50%;
    border-left:black 1px solid;
    margin-left:-5%;
    padding-left:5%;
    /*min-height:80%;*/
}
nav, main {
    display:inline-block;
}

nav ul {
    list-style:none;
    display:block;
    padding-left:0px;
    margin-left:auto;
    margin-right:10%;
    margin-top:0;
    width:50%;
    font-weight:bold;
    font-size:110%;
}
nav li {
    margin-bottom:1em;
}

span.title {
    font-style:italic;
}
span.version{
    font-weight:bold;
}

span.role{
  font-style:italic;
}

h1, h2, nav li {
	a {
		&:hover, &:focus, &:active {
		color:$main_color;
		text-decoration:underline;
		}
	}
}

h1 {
    margin-top:0;
    font-size:125%;
}

h2 {
	font-weight:normal;
	font-size:110%;
	font-style:italic;
	color:$main_color;
	margin: 1.5em 0 0.5em 0;
}

h3 {
	font-weight:normal;
	font-size:110%;
	font-style:italic;
}

h3 ~ article > h1 {
	margin-top:0.5em;
}

article h1 {
    font-weight:normal;
    font-size:110%;
    margin-bottom:0.5em;
    color:initial;

    a {
    	color:$main_color;
    	text-decoration:none;

    	&:visited {
    		color:$main_color;
    	}
    }
}

div.proj_lead {
    font-size:110%;
}

/* Publication lists */
ol.pub_list, ul.pub_list, ul.people_list {
    list-style: none;
    padding: 0;
    display: table;
    width: 100%;
    table-layout: fixed;

	li {
    display: table-row;
    /* width: 100%; */

    &:not(:last-of-type) span.list_entry {
    	padding-bottom:2ex;
    }

	}

	span.list_num {
		width: 2.5em;
		display: table-cell;
	}

	.list_entry {
		display: table-cell;
	}

	span.pub_available {
		display:block;
		font-style:italic;

		a {
			font-style:normal;
			word-break:break-word;
		}
	}
}

a {
	color:$main_color;

	&:visited {
		color:$desat_color;
	}
}

sup {
	line-height:0;
}

/* Responsive display for smaller devices */
@media only screen and (max-width:700px) {
    nav, main {
        display:block;
        width:100%;
    }
    nav {
        border-top:1px solid black;
        padding-top:1em;
    }
    nav ul {
        width:auto;
        margin-right:auto;
        text-align:center;
    }
    nav li {
        margin-bottom:0.25em;
    }
    main {
        border-left:0;
        border-top:black 1px solid;
        margin-left:0;
        padding-left:0;
        padding-top:0.5em;
    }
    #banner{
        margin-bottom:0.5em;
    }
    #banner img {
	    margin:0;
    }
}

